# Climate-llm-app

./: Pasted-DOM-fully-loaded-about-to-load-scripts-app-js-2-DOM-content-loaded-setting-up-event-listeners-app--1727118401352.txt  README.md  main.py  pyproject.toml  replit.nix
static/css/: custom.css
static/js/: app.js  charts.js  llm.js
templates/: about.html  index.html  landing.html  report.html
templates/components/: footer.html  header.html
utils/: advanced_models.py  data_processor.py  llm_integration.py  llm_simulator.py  nlg.py  replit_db.py  scenario_comparison.py
